css/styles.css
/* Reset */
h1, h2, h3, h4, h5, h6, p {
  margin: 0;
}

ul, ol {
  list-style: none;
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

img {
  display: block;
}

/* Body */
body {
  font-family: "Roboto", sans-serif;
  color: #434455;
  background-color: #FFF;
}

/* Container */
.container {
  max-width: 1158px;
  padding-left: 15px;
  padding-right: 15px;
  margin-left: auto;
  margin-right: auto;
}

/* Header */
.header {
  border-bottom: 1px solid #e7e9fc;
}

header .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-logo {
  color: #4D5AE5;
  font-family: "Raleway", sans-serif;
  font-size: 18px;
  font-weight: 700;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  margin-right: 76px;
}

.header-logo-studio {
  color: #2E2F42;
}

.nav-list {
  display: flex;
  gap: 40px;
}

.nav-link {
  color: #2E2F42;
  font-size: 16px;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.02em;
  padding: 24px 0;
  display: block;
}

.nav-link:hover,
.nav-link:focus {
  color: #404BBF;
}

.header-contacts {
  font-style: normal;
}

.header-contacts-list {
  display: flex;
  gap: 40px;
  list-style: none;
  margin: 0;
  padding: 0;
  align-content: flex-end;
}

.contact-link {
  color: #434455;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  letter-spacing: 0.02em;
}

.contact-link:hover,
.contact-link:focus {
  color: #404BBF;
}

/* Solutions */
.solutions {
  background-color: #2E2F42;
  text-align: center;
  padding: 188px 0;
}

.solutions-title {
  color: #ffffff;
  text-align: center;
  font-size: 56px;
  font-weight: 700;
  line-height: 1.07;
  letter-spacing: 0.02em;
  margin-left: auto;
  margin-right: auto;
  max-width: 496px;
  margin-bottom: 48px;
}

.solutions-button {
  display: block;
  color: #ffffff;
  font-size: 16px;
  font-weight: 500;
  line-height: 1.5; /* 150% */
  letter-spacing: 0.04em;
  background: #4d5ae5;
  cursor: pointer;
  margin: 0 auto;
  min-width: 169px;
  height: 56px;
  border-radius: 4px;
  border: none;
}

.solutions-button:hover,
.solutions-button:focus {
  background: #404BBF;
}

/* Advantages */

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.advantages {
  padding: 120px 0;
}

.advantages-list {
  display: flex;
  gap: 24px;
}

.advantages-title {
  color: #2E2F42;
  font-size: 20px;
  font-weight: 500;
  line-height: 1.2;
  letter-spacing: 0.02em;
  margin-bottom: 8px;
}

.advantages-item {
  flex-basis: calc((100% - 72px) / 4);
}

.advantages-text {
  color: #434455;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  letter-spacing: 0.02em;
}

/* Team */
.team {
  padding: 120px 0;
  background: #F4F4FD;
}

.team-title {
  text-align: center;
  margin-bottom: 72px;
  font-size: 36px;
  font-weight: 700;
}

.team-list {
  display: flex;
  gap: 24px;
  flex-wrap: wrap;
}

.team-item {
  flex-basis: calc((100% - 3 * 24px) / 4);
  background-color: #FFF;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  text-align: center;
}

.team-image {
  width: 100%;
  height: auto;
}

.team-info {
  padding: 32px 0;
}

.team-name {
  margin-bottom: 8px;
  font-size: 20px;
  font-weight: 500;
}

.team-role {
  font-size: 16px;
  font-weight: 400;
}

/* Portfolio */
.portfolio {
  padding: 120px 0;
}

.portfolio-title {
  color: #2E2F42;
  text-align: center;
  font-size: 36px;
  font-weight: 700;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-transform: capitalize;
  margin-bottom: 72px;
}

.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  gap: 24px;
}

.portfolio-item {
  background-color: #FFF;
  flex-basis: calc((100% - 2 * 24px) / 3);
  text-align: center;
  border-bottom: 1px solid #E7E9FC;
}

.portfolio-image {
  width: 100%;
  height: auto;
}

.portfolio-name {
  color: #2E2F42;
  font-size: 20px;
  font-weight: 500;
  line-height: 1.2;
  letter-spacing: 0.02em;
  margin-top: 16px;
}

.portfolio-category {
  color: #434455;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  letter-spacing: 0.02em;
  margin-bottom: 32px;
}

/* Footer */
.footer {
  background-color: #2E2F42;
  text-align: center;
  padding: 100px 0;
}

.footer-logo {
  color: #4D5AE5;
  font-family: "Raleway", sans-serif;
  font-size: 18px;
  font-weight: 700;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
}

.footer-logo-studio {
  color: #F4F4FD;
}

.footer-text {
  color: #F4F4FD;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  letter-spacing: 0.02em;
  margin-top: 16px;
}

